<resources>
    <string name="app_name">ConvoyApp</string>
    <string name="please_complete_the_form">Please Complete the Form</string>
    <string name="Submit">Submit</string>
    <string name="userName">Enter your user name</string>
    <string name="lastName">Enter your last name</string>
    <string name="firstName">Enter your first name</string>
    <string name="userPassword">Enter your password</string>
    <string name="userConfirmPassword">Confirm your password</string>
    <string name="please_sign_in"> Welcome to Convoy App. Please Sign In</string>
    <string name="start_convoy">Start Convoy</string>
    <string name="join_convoy">Join Convoy</string>
    <string name="leave_convoy">Leave Convoy</string>
    <string name="end_convoy">End Convoy</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity">Notification</string>


</resources>