<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.convoyapp.MessageFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_message"
        tools:layout_editor_absoluteX="225dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/extendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/start_convoy"
        android:focusable="true"
        android:text="@string/start_convoy"
        android:tint="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/extendButton"
        app:layout_constraintEnd_toEndOf="@+id/extendButton"
        app:srcCompat="@drawable/ic_start" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/join_convoy"
        android:focusable="true"
        android:text="@string/join_convoy"
        android:tint="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="@+id/startButton"
        app:srcCompat="@drawable/ic_join" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/leaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/leave_convoy"
        android:focusable="true"
        android:text="@string/leave_convoy"
        android:tint="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/joinButton"
        app:layout_constraintEnd_toEndOf="@+id/joinButton"
        app:srcCompat="@drawable/ic_cancel" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/endButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/end_convoy"
        android:focusable="true"
        android:text="@string/end_convoy"
        android:tint="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/extendButton"
        app:layout_constraintEnd_toStartOf="@+id/extendButton"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/mapView"
        app:srcCompat="@drawable/ic_cancel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:srcCompat="@drawable/ic_logout"
        android:contentDescription="@string/log_out" />

</androidx.constraintlayout.widget.ConstraintLayout>